# RelayDrive

./: .gitignore  .prettierignore  .prettierrc  CREDITS.md  IMPLEMENTATION_SUMMARY.md  README.md  biome.json  crowdin.yml  next.config.ts  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: ACC_BROADCAST_LIMITATIONS.md  ACC_TELEMETRY.md  BROADCAST_MAP.md  DEEP_LINKS.md  GRAPHICS_MAP.md  PHYSICS_MAP.md  STATICS.md
scripts/: register-dev-protocol.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.json
src-tauri/capabilities/: default.json  desktop.json  overlay.json
src-tauri/src/: app_state.rs  auth.rs  hotkeys.rs  lib.rs  models.rs  setup_share.rs
src-tauri/src/broadcast_protocol/: client.rs  mod.rs  session.rs
src-tauri/src/broadcast_protocol/protocol/: acc_enum.rs  inbound.rs  mod.rs  outbound.rs  parser.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/games/: commands.rs  launch_game.rs  mod.rs  process.rs
src-tauri/src/games/acc/: broadcast.rs  graphics.rs  mod.rs  physics.rs  runtime.rs  statics.rs
src-tauri/src/games/iracing/: mod.rs  runtime.rs
src-tauri/src/games/lmu/: mod.rs  runtime.rs
src-tauri/src/overlays/: config.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/setups/: mod.rs
src-tauri/src/users/: mod.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  tauri-bridge.ts
src/components/: crew-sync.tsx  deep-link-listener.tsx  global-hotkey-listener.tsx  hotkey-action-registrar.tsx  main-app-layout.tsx  main-app.tsx  overlay-window-sync.tsx  sidebar.tsx  splash-screen.tsx  (+2 more)
(+78 files in other folders)
