[package]
name = "relaydrive"
version = "0.0.6"
description = "Overlay and Telemetry App for sim racing games"
authors = ["rotationracing"]
license = "APGL-3.0"
repository = "https://github.com/rotationracing/relaydrive"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1.19"
sysinfo = { version = "0.30", features = ["multithread"] }
acc_shared_memory_rs = { version = "0.8.0", features = ["serde"] }
# Dependencies for vendored acbc protocol
nom = "6"
nom-supreme = "0.4.2"
thiserror = "1"
tinyvec = "1"
byteorder = "1.4.3"
fnv = "1.0.7"

[target."cfg(target_os = \"windows\")".dependencies]
tauri-plugin-single-instance = { version = "2.3.1", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
